fixing title size on mobile

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,4 +1,13 @@
 @media (max-width: 768px) {
+    header .home-text h1 {
+        font-size: 70px;
+        font-family: Tahoma, sans-serif;
+        color: #F2F2F2;
+        letter-spacing: 5px;
+        margin: 0 auto 18px auto;
+        text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
+     }
+
     .section-top {
         flex-direction: row;
         padding-top: 1rem;
@@ -23,6 +32,14 @@
 }
 
 @media (max-width: 480px) {
+    header .home-text h1 {
+        font-size: 50px;
+        font-family: Tahoma, sans-serif;
+        color: #F2F2F2;
+        letter-spacing: 5px;
+        margin: 0 auto 18px auto;
+        text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
+     }
     .section-top {
         padding-top: 0.5rem;
         padding-bottom: 0.5rem;
